tests/algorithms/transpiler/CPP/web_programming/fetch_bbc_news.error
compile: exit status 1
/workspace/mochi/tests/algorithms/transpiler/CPP/web_programming/fetch_bbc_news.cpp:87:215: warning: multi-character character constant [-Wmultichar]
   87 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << " : "; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/algorithms/transpiler/CPP/web_programming/fetch_bbc_news.cpp: In function ‘NewsResponse _fetch_NewsResponse(const std::string&)’:
/workspace/mochi/tests/algorithms/transpiler/CPP/web_programming/fetch_bbc_news.cpp:170:62: error: too many initializers for ‘NewsResponse’
  170 |         return NewsResponse{1, 1, "delectus aut autem", false};
      |                                                              ^
